[service] Insert vsan-zdom,vsanfs,vsan-clom,vsan-health-eng into teamgroups
